--- a/app/views/layouts/services.html.haml
+++ b/app/views/layouts/services.html.haml
@@ -14,7 +14,7 @@
   %body
     .main
       = render "shared/menu_bar" 
-    .container
+    .total-division
       #content
         =yield   
       = render 'shared/footer'
