--- a/app/views/layouts/slides.html.haml
+++ b/app/views/layouts/slides.html.haml
@@ -12,9 +12,9 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    .main
-      = render "shared/menu_bar" 
-    .container
+    .total-division
+      .main
+        = render "shared/menu_bar"      
       #content
         =yield      
       = render 'shared/footer'
