--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,9 +6,10 @@ img											{border:0}
 h1,h2,h3,h4,h5,h6							{font-weight:normal}
 li											{list-style:none}
 
-#head										{width:100%;float:left;}
+#head										{width:100%;float:left; background:url(headBg.png) repeat-x; margin-bottom:0px}
 .head_height								{height:160px}
 .head_pad									{padding-bottom:30px}
+
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
 #head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
@@ -26,7 +27,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-24px}
 
-#content									{margin-top:10px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
+#content									{margin-top:0px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -38,7 +39,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-
 #ct_pan ul li a:hover						{color:#31a1ff}
 #ct_pan a.tweet								{width:95px; height:102px; float:right; position:absolute; right:-50px; top:42px; background:url(tweet.png) no-repeat}
 
-#welcom_pan									{width:100%; margin-top:37px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px}
+#welcom_pan									{width:100%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan a.brochure						{width:auto; height:54px; margin-right:31px; padding:0 8px 0 0; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
@@ -66,7 +67,7 @@ ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px;
 ul#infoPan li p a             {font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
 ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;}
 
-#quotPan									{width:848px; height:80px; margin-top:0px; float:right; position:relative; left:-24px; border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
+#quotPan									{width:100%; height:80px; margin-top:0px; float:right; position:relative;  border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:left; line-height:45px}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
 #quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
@@ -110,7 +111,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 .div-slider {width:80%; margin-right:130px; position:relative; margin-top:160px}
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
-.pull-left {margin-left :30px; margin-top:10px}
-.main { width:100%; }
-.show-title {overflow:scroll; width:200px; height:200px; margin:10px; }
-
+.pull-left {margin-left :30px; margin-top:5px; height:25px}
+.main { width:100%;  }
+.show-title {overflow-y:scroll; overflow-x:hidden; width:200px; height:200px; margin:10px; }
+#head-menu {width:70%; text-align:center; margin-right:150px}
