--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,8 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    .container
+    .total-division
       = render "shared/menu_bar" 
       =yield      
       = render 'shared/footer'  
-      
+    
