--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -113,5 +113,10 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
 .main { width:100%;  }
-.show-title {overflow-y:scroll; overflow-x:hidden; width:200px; height:200px; margin:10px; }
+.show-title {overflow-y:scroll; overflow-x:hidden; padding-right: 5px;
+visibility: visible;
+border: thin solid white;
+scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-color: #336699;
+scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
+scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:200px; height:200px; margin:10px; }
 #head-menu {width:70%; text-align:center; margin-right:150px}
