--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     %title
       industrial web site | #{@head.fetch(:title, '') if @head}
     =stylesheet_link_tag "application", :media => "all"
+    =stylesheet_link_tag "application", :media => "all"
+    =favicon_link_tag 'rails.png', rel:'shortcut icon', type: 'image/png'
     =stylesheet_link_tag "styles", :media => "all"
     =javascript_include_tag "application"
     =csrf_meta_tags
