--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,7 +6,7 @@ img											{border:0}
 h1,h2,h3,h4,h5,h6							{font-weight:normal}
 li											{list-style:none}
 
-#head										{width:100%;float:left; background:url(headBg.png) repeat-x; margin-bottom:0px}
+#head										{width:100%;float:left; background:url(headBg.png) repeat-x; }
 .head_height								{height:160px}
 .head_pad									{padding-bottom:30px}
 
@@ -39,7 +39,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-
 #ct_pan ul li a:hover						{color:#31a1ff}
 #ct_pan a.tweet								{width:95px; height:102px; float:right; position:absolute; right:-50px; top:42px; background:url(tweet.png) no-repeat}
 
-#welcom_pan									{width:100%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px}
+#welcom_pan									{width:100%; margin-left:-70px; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan a.brochure						{width:auto; height:54px; margin-right:31px; padding:0 8px 0 0; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
@@ -108,7 +108,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
 
-.div-slider {width:80%; margin-right:130px; position:relative; margin-top:160px}
+.div-slider {width:80%; margin-right:130px; position:relative; margin-top:10px}
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
@@ -120,3 +120,4 @@ scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
 scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:200px; height:200px; margin:10px; }
 #head-menu {width:70%; text-align:center; margin-right:150px}
+.content1 {width:80%; float:right; margin-right:60px}
