--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -1,6 +1,6 @@
 #head
   #head_cen
-    #head_sup.head_height
+    .head_height
       .head-serach        
         .pull-left
           =link_to (image_tag "en.png", :class => "language-icon"), change_language_path(:language => "en")
