--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,7 +6,7 @@ img											{border:0}
 h1,h2,h3,h4,h5,h6							{font-weight:normal}
 li											{list-style:none}
 
-#head										{width:100%;float:left; background:url(headBg.png) repeat-x; }
+#head										{width:100%; background:url(headBg.png) repeat-x; }
 .head_height								{height:160px}
 .head_pad									{padding-bottom:30px}
 
@@ -20,14 +20,14 @@ li											{list-style:none}
 h1.logo										{width:160px; height:36px; margin-top:50px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:500px; height:30px; margin-top:45px; float:right}
-#head ul li									{width:auto; margin-left:1px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
+#head ul li									{width:auto; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
 #head ul li:first-child						{margin:0}
 #head ul li	a,#head ul li a.active			{width:auto; height:42px; padding:0 13px; float:left; color:inherit; background:#252525}
 #head ul li	a:hover,#head ul li a.active	{color:#31a1ff; background:#272727}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
-img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-24px}
+img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
-#content									{margin-top:0px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
+#content									{margin-top:-10px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -39,12 +39,12 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-
 #ct_pan ul li a:hover						{color:#31a1ff}
 #ct_pan a.tweet								{width:95px; height:102px; float:right; position:absolute; right:-50px; top:42px; background:url(tweet.png) no-repeat}
 
-#welcom_pan									{width:100%; margin-left:-70px; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
+#welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan a.brochure						{width:auto; height:54px; margin-right:31px; padding:0 8px 0 0; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
-#welcom_pan p								{width:755px; margin:25px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
+#welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
 #welcom_pan h3								{clear:left}
@@ -57,10 +57,10 @@ h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 .rgtWrap h3									{width:100%}
 h3											{width:auto; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
 h3 span										{color:#3b3b3b; margin-right:0px}
-ul#infoPan									{width:100%; float:left}
-ul#infoPan li								{width:226px; margin-left:56px; float:left}
+ul#infoPan									{width:80%; float:left; margin-left:5%; margin-right:10%}
+ul#infoPan li								{width:430px; float:left; margin-left:5%; }
 ul#infoPan li:first-child					{margin:0}
-ul#infoPan li h3							{width:100%; height:67px; float:left; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px; margin-left:-5px;}
+ul#infoPan li h3							{width:180px; height:67px; float:left; text-align:center; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px; margin-left:-5px;}
 ul#infoPan li h3 span						{color:#3b3b3b; margin-right:2px}
 ul#infoPan li h3 img						{margin-right:31px; float:right}
 ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
@@ -108,16 +108,17 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
 
-.div-slider {width:80%; margin-right:130px; position:relative; margin-top:10px}
+.div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
 .main { width:100%;  }
-.show-title {overflow-y:scroll; overflow-x:hidden; padding-right: 5px;
-visibility: visible;
+.show-title {overflow-y:scroll; overflow-x:hidden; visibility: visible;
 border: thin solid white;
 scrollbar-face-color: #336699; scrollbar-3dlight-color: #336699; scrollbar-base-color: #336699;
 scrollbar-track-color: #336699; scrollbar-darkshadow-color: #000; scrollbar-arrow-color: #000;
-scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:200px; height:200px; margin:10px; }
+scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; height:200px; margin:10px; }
 #head-menu {width:70%; text-align:center; margin-right:150px}
 .content1 {width:80%; float:right; margin-right:60px}
+.text-div {width:90%; margin-top:20px; margin-right:20px}
+
