--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,9 @@
     =csrf_meta_tags
   %body
     .total-division
-      = render "shared/menu_bar" 
+      = render "shared/menu_bar"   
+      .div-slider
+        = render 'slider'
       #content
         =yield      
       = render 'shared/footer'  
