--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -9,6 +9,9 @@
     .field
       = f.label :description
       = f.text_area :description, :cols => '80', :rows => "3", :class => "slide-description"
+    .field
+      = f.label :description_fa
+      = f.text_area :description_fa, :cols => '80', :rows => "3", :class => "slide-description"  
     .div_btn
       = f.submit 'update'
       
