--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -10,10 +10,13 @@
     = f.label :title
     = f.text_field :title
   .field
+    = f.label :title_fa
+    = f.text_field :title_fa  
+  .field
     = f.label :page_html_en
     %br
       %div.editor
-      = f.text_area :page_html_en, :class => "ckeditor"
+      = f.text_area :page_html, :class => "ckeditor"
       :javascript
         CKEDITOR.replace( 'page_html_en' );
   .field
