--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,4 +16,4 @@
           .clrear-float
             
     #quotPan        
-      = link_to 'New Products', new_product_path, :class => "btn", :name => "btn"
+      = link_to content_tag("span", "New Products"), new_product_path, :class => "brochure"
