--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -13,8 +13,6 @@
             .td
               = link_to 'اعمال تغییرات', edit_service_path(service)
               = link_to 'حذف', service, :method => :delete, :data => { :confirm => 'Are you sure?' }
-          .clrear-float
-          
+          .clrear-float          
     #quotPan        
-      = link_to 'New Services', new_service_path, :class => "btn", :name => "btn"
-
+      = link_to content_tag("span", "New Service"), new_service_path, :class => "brochure"
