--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -42,8 +42,8 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
-#welcom_pan a.brochure						{width:auto; height:54px; margin-right:31px; padding:0 8px 0 0; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
-#welcom_pan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
+#welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin-left:31px; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
+#welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
