--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -7,12 +7,9 @@
     .show-list
       .table
         - @services.each do |service|
-          .tr            
+          .tr
+            .td= link_to content_tag(:div, service.title, :class => "pro-title"), service
             .td= link_to (image_tag service.pictures.first.image(:medium)), service
-            .td= link_to service.title, service
-            .td
-              = link_to 'اعمال تغییرات', edit_service_path(service)
-              = link_to 'حذف', service, :method => :delete, :data => { :confirm => 'Are you sure?' }
-          .clrear-float          
+                              
     #quotPan        
       = link_to content_tag("span", "New Service"), new_service_path, :class => "brochure"
