--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,11 +39,16 @@
   padding: 7px;
   margin-bottom: 10px;
 }
-.list-div {width:85%; margin-right:20px}
-.show-list {margin-top:50px}
+.list-div {width:85%; margin-top:10px; margin-bottom:20px}
+.show-list {margin-top:70px; margin-bottom:20px}
 
 .clrear-float {clear:both}
-.td {float:right; width:100px; margin:10px}
+.tr {float:left; width:300px; height:250px; margin-left:10px}
+.td {width:300px; margin:10px; text-align:center;}
+.td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#000; width:100%;}
+.td a div.pro-title {margin-top:20px; text-decoration:none;}
+.tr:hover div.pro-title { background:url(slideBg1.png) repeat-x; color:#fff; } 
+.td:hover a {text-decoration:none;}
 .show-des-en {width:700px; margin-top:60px; text-align:left; float:left;}
 .show-des-fa {width:700px; margin-top:60px; text-align:right; float:right; margin-right:100px}
 
