--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -64,15 +64,16 @@ div {
 
 .image-des-holder {
   position: relative;
-  top: -40px;
-  background-color: #ffffff;
-  opacity: 0.4;
-  filter: alpha(opacity=40); /* For IE8 and earlier */;
+  color:#fff;
+  top: -40px;  
+  background:url(slideBg1.png) repeat-x;
+  opacity: 0.7;
+  filter: alpha(opacity=70); /* For IE8 and earlier */;
   height: 40px;
   p {     
     opacity:1;
     filter:alpha(opacity=100); /* For IE8 and earlier */;
     }
-
+  
 }
  
