--- a/app/views/layouts/slides.html.haml
+++ b/app/views/layouts/slides.html.haml
@@ -9,6 +9,7 @@
       industrial web site | #{@head.fetch(:title, '') if @head}
     =stylesheet_link_tag "application", :media => "all"
     =stylesheet_link_tag "styles", :media => "all"
+    =favicon_link_tag 'rails.png', rel:'shortcut icon', type: 'image/png'
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
