--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -6,7 +6,7 @@
       Company
     %p#notice= notice
     .show-des-en     
-      =raw @page.page_html_fa
+      =raw @page.page_html
     #quotPan   
       = link_to content_tag("span", "Edit"), edit_page_path(@page), :class => "brochure"            
       = link_to content_tag("span", "Back"), homedesign_path, :class => "brochure"    
