--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -11,12 +11,12 @@
           %a{href: "index.html"} M CUBE
         %ul
           %li
-            = link_to "Home", homedesign_path, :class => "active"           
+            = link_to t("home"), homedesign_path, :class => "active"           
           %li
-            = link_to "SERVICES", Service
+            = link_to (t"services_section.title"), Service
           %li
-            = link_to "PRODUCTS", Product       
-          %li
-            = link_to "ABOUT", Page.first
-          %li
-            = link_to "CONTACT", Page.last
+            = link_to (t"products_section.title"), Product       
+          -Page.all.each do |page|  
+            %li
+              = link_to page.title, page_path(page)
+            
