--- a/app/views/home/_slider.html.haml
+++ b/app/views/home/_slider.html.haml
@@ -1,4 +1,4 @@
-= image_tag "bannerBg.png", :class => "ban_bg"
+.above-menu
 .hero-unit
   .carousel.slide
     .carousel-inner
@@ -21,3 +21,4 @@
               %li{"data-slide-to" => "#{index}", "data-target" => "#homeCarousel", :class => "slide-indicator"}      
     %a.carousel-control.left{"data-slide" => "prev", href: ".carousel"} ›
     %a.carousel-control.right{"data-slide" => "next", href: ".carousel"}‹             
+.below-menu
