--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,4 +55,5 @@
 .total-division {width:100%; background:url(headBg.png) repeat-x; }
 
  
-
+.above-menu {margin-top:-48px; margin-right:5px;width:450px;height:25px; background:url(bannerBgh.png) repeat-x;position: relative; }
+.below-menu{margin-top:-10px;margin-right:-25px;width:950px;height:50px; background:url(bannerBgf.png) repeat-x;position: relative; }
