--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -27,7 +27,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
-#content									{margin-top:-10px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
+#content									{margin-top:-25px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -106,7 +106,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 */#service_pan ul li:hover					{background:#fbfbfb}
 #service_pan ul li h5						{width:auto; margin:10px 0 0 10px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#31a1ff}
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
-#service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
+#service_pan ul li p a						{width:auto; float:right; color:#31a1ff; margin-left:10px}
 
 .div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
 
@@ -121,4 +121,4 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 #head-menu {width:70%; text-align:center; margin-right:150px}
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
-
+.title {float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
