--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -11,16 +11,15 @@
           %a{href: "index.html"} M CUBE
         %ul
           %li
-            = link_to "Home", homedesign_path, :class => "active"           
+            = link_to "Home", homedesign_path, :class => ('active' if current_page?( homedesign_path))          
           %li
-            = link_to "SERVICES", Service
+            = link_to "SERVICES", Service, :class => ('active' if current_page?(Service))
           %li
-            = link_to "PRODUCTS", Product       
+            = link_to "PRODUCTS", Product,  :class => ('active' if current_page?(Product))
           %li
-            = link_to "ABOUT", Page.first
+            = link_to "ABOUT", Page.first, :class => ('active' if current_page?(Page.first))
           %li
-            = link_to "CONTACT", Page.last
-        
-      
-        
+            = link_to "CONTACT", Page.last, :class => ('active' if current_page?(Page.last))
+          
+ 
       
