--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@
 .show-list {margin-top:70px; margin-bottom:20px}
 
 .clrear-float {clear:both}
-.tr {float:left; width:300px; height:250px; margin-left:10px}
+.tr {float:left; width:300px; height:300px; margin-left:10px}
 .td {width:300px; margin:10px; text-align:center;}
 .td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#000; width:100%;}
 .td a div.pro-title {margin-top:20px; text-decoration:none;}
@@ -53,8 +53,13 @@
 .show-des-fa {width:700px; margin-top:60px; text-align:right; float:right; margin-right:100px}
 
 .total-division {width:100%; background:url(headBg.png) repeat-x; }
-
  
 .above-menu {margin-top:-48px; margin-right:5px;width:450px;height:25px; background:url(bannerBgh.png) repeat-x;position: relative; }
 .below-menu{margin-top:-10px;margin-right:-25px;width:950px;height:50px; background:url(bannerBgf.png) repeat-x;position: relative; }
 
+.text{float:left;margin-right:50px; width:300px}
+.div_pic {float:right;margin-top:10px;width:25%}
+.newP_page {margin-top:50px}
+.t {color:#000}
+.description  {width:100%}
+.footer_Link {text-align:center}
