--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -45,9 +45,13 @@ h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin-left:31px; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
+#welcom_pan .details p {width:100%; margin:0px}
+#welcom_pan .details {float:right; width:70%; text-align:right; margin-top:10px}
+#welcom_pan .div_pic .td {width:100%; text-align:right}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
 #welcom_pan h3								{clear:left}
+#welcom_pan h3.t								{float:right}
 .lftWrap									{width:300px; float:left; clear:left}
 .lftWrap p									{width:100%; float:left; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:28px; color:#4d4d4d}
 .rgtWrap input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
