--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,4 +62,4 @@
 .newP_page {margin-top:50px}
 .t {color:#000}
 .description  {width:100%}
-.footer_Link {text-align:center}
+.footer_Link {text-align:center; margin-top:20px}
