--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @product, :html => { :multipart => true  } do |f|
+= nested_form_for @product, :html => { :multipart => true  } do |f|
   - if @product.errors.any?
     #error_explanation
       %h2= "#{pluralize(@product.errors.count, "error")} prohibited this product from being saved:"
@@ -31,6 +31,7 @@
         =picture.file_field :image
         =picture.text_area :description, :rows => 3
         =picture.text_area :description_fa, :rows => 3
-
+        =picture.link_to_remove "Remove this task"
+  = f.link_to_add "Add a picture", :pictures
   .actions
     = f.submit 'ثبت'
