--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @service, :html => { :multipart => true  }  do |f|
+= nested_form_for @service, :html => { :multipart => true  }  do |f|
   - if @service.errors.any?
     #error_explanation
       %h2= "#{pluralize(@service.errors.count, "error")} prohibited this service from being saved:"
@@ -30,5 +30,7 @@
         =picture.file_field :image
         =picture.text_area :description, :rows => 3
         =picture.text_area :description_fa, :rows => 3
+        =picture.link_to_remove "Remove this task"
+    = f.link_to_add "Add a picture", :pictures    
   .actions
     = f.submit 'ثبت'
