--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,6 +1,10 @@
-%div.newP_page
-	%h1.title تعریف محصول جدید
-
-	= render 'form'
-
-	= link_to 'بازگشت', products_path
+#welcom_pan   
+  %h2 
+    %span
+      Company
+    Add Product
+  .show-list
+    = render 'form'
+  #quotPan
+    .footer_Link
+      = link_to 'بازگشت', products_path
