--- a/app/views/home/_slider.html.haml
+++ b/app/views/home/_slider.html.haml
@@ -5,11 +5,12 @@
       -@slides.each do |slide|
         .item-row.item
           = link_to (image_tag slide.image(:gallery_size), :id =>  slide.id ), slide, :class => "slide"
-          .row-controls
-            = link_to edit_slide_path(slide) do
-              %i.icon-edit
-            = link_to  slide, :method => :delete, :data => { :confirm => 'Are you sure?' }  do
-              %i.icon-trash
+          -if is_admin?
+            .row-controls
+              = link_to edit_slide_path(slide) do
+                %i.icon-edit
+              = link_to  slide, :method => :delete, :data => { :confirm => 'Are you sure?' }  do
+                %i.icon-trash
           -if slide.description.present?
             .image-des-holder
               = slide.description 
