--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -15,10 +15,11 @@
           .td= photo.description
           
     .clrear-float
-    #quotPan
-      .footer_Link
-        = link_to 'اعمال تغییرات', edit_service_path(@service)
-        \|
-        = link_to 'بازگشت', services_path
-        \|
-        = link_to 'Destroy', @service, method: :delete, data: { confirm: 'Are you sure?'}
+    -if is_admin?
+      #quotPan
+        .footer_Link
+          = link_to 'اعمال تغییرات', edit_service_path(@service)
+          \|
+          = link_to 'بازگشت', services_path
+          \|
+          = link_to 'Destroy', @service, method: :delete, data: { confirm: 'Are you sure?'}
