--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,20 +3,20 @@
     %h6
       %a{href: "index.html"} mcube
     %ul
-      %li
-        = link_to "Home", homedesign_path
-      %li.space \
-      %li
-        = link_to "CONTACT", Page
       %li.space /
+      %li
+        = link_to "HOME", homedesign_path
+      %li.space \      
       %li
         = link_to "SERVICES", Service
-      %li.space \
-      %li
-        = link_to "PRODUCTS", Product
       %li.space /
       %li
-        = link_to "ABOUT", Page
+        = link_to "PRODUCTS", Product
+      %li.space \
+      -Page.all.each do |page|  
+        %li
+          = link_to page.title.upcase, page_path(page), :class => ('active' if current_page?(page_path(page)))    
+        %li.space /
       
     %p
       © Your Copyright Info Here. Designed by:
