--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@
 .show-list {margin-top:70px; margin-bottom:20px}
 
 .clrear-float {clear:both}
-.tr {float:left; width:300px; height:300px; margin-left:10px}
+.tr {float:left; width:300px; height:300px; margin-left:10px; text-align:center}
 .td {width:300px; margin:10px; text-align:center;}
 .td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#000; width:100%;}
 .td a div.pro-title {margin-top:20px; text-decoration:none;}
