--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -12,6 +12,6 @@
         .footer_Link
           = link_to content_tag("span", "Edit"), edit_page_path(@page)
           \|
-          = link_to content_tag("span", "Back"), homedesign_path
+          = link_to content_tag("span", "Back"), home_path
   
 
