--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -21,7 +21,7 @@
           %li
             = link_to "PRODUCTS", Product,  :class => ('active' if current_page?(Product))                               
           %li
-            = link_to "Home", homedesign_path, :class => ('active' if current_page?( homedesign_path))          
+            = link_to "Home", home_path, :class => ('active' if current_page?( home_path))          
           
           
 
