--- a/app/views/slides/show.html.haml
+++ b/app/views/slides/show.html.haml
@@ -12,5 +12,5 @@
       
     #quotPan   
       = link_to content_tag("span", "Edit"), edit_slide_path(@slide), :class => "brochure"            
-      = link_to content_tag("span", "Back"), homedesign_path, :class => "brochure"    
+      = link_to content_tag("span", "Back"), home_path, :class => "brochure"    
     
