--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,8 +58,7 @@
 .below-menu{margin-top:-10px;margin-right:-25px;width:950px;height:50px; background:url(bannerBgf.png) repeat-x;position: relative; }
 
 .text{float:left;margin-right:50px; width:300px}
-.div_pic {float:right;margin-top:10px;width:25%}
 .newP_page {margin-top:50px}
 .t {color:#000}
-.description  {width:100%}
+.description  {width:100%; }
 .footer_Link {text-align:center; margin-top:20px}
