--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -46,8 +46,11 @@ h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
 #welcom_pan .details p {width:100%; margin:0px}
-#welcom_pan .details {float:right; width:70%; text-align:right; margin-top:10px}
-#welcom_pan .div_pic .td {width:100%; text-align:right}
+#welcom_pan .details {float:right; width:60%; text-align:right; margin-top:10px}
+#welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
+
+#welcom_pan .div_pic .td {width:90%; margin-right:15px;  text-align:right}
+#welcom_pan .div_pic .tr {width:25%; float:left; margin-right:10px}
 #welcom_pan	iframe							{margin:37px 0 0 14px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
 #welcom_pan a.enlarg						{width:auto; margin:15px 0 0 14px; float:left; color:#848484}
 #welcom_pan h3								{clear:left}
@@ -113,6 +116,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff; margin-left:10px}
 
 .div-slider {width:70%; margin-right:15%; margin-left:15%; margin-top:-20px}
+.div_pic {margin-top:20px;width:100%;  height:250px; }
 
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .pull-left {margin-left :30px; margin-top:5px; height:25px}
