--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,7 +17,7 @@ li											{list-style:none}
 #head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 #head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:200px; height:131px; margin-top:10px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:200px; height:100px; margin-top:5px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:500px; height:30px; margin-top:45px; float:right}
 #head ul li									{width:auto; margin-left:1px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
@@ -42,7 +42,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #welcom_pan									{width:85%; margin-left:5%;margin-right:5%; margin-top:27px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px;}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
-#welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin-left:31px; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
+#welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
 #welcom_pan #quotPan a.brochure span					{width:auto; height:54px; padding:0 13px 0 23px; float:left; background:url(buttonBg.png) no-repeat 0 0}
 #welcom_pan p								{width:755px; margin:55px 0 0 14px; float:left; font-size:12px; color:#4d4d4d; line-height:18px}
 #welcom_pan .details p {width:100%; margin:0px}
@@ -78,7 +78,9 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:right; line-height:45px}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
 #quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
-#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+.actions input.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff;  text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:right; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff;  text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+
 #quotPan input.btn:active					{background-position:1px 1px}
 
 #blog										{width:506px; margin-top:24px; float:left}
@@ -133,3 +135,5 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .content1 {width:80%; float:right; margin-right:60px}
 .text-div {width:90%; margin-top:20px; margin-right:20px}
 .title {float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
+
+.enable_file_select {width:150px; height:150px}
